# conan-example

./: CMakeLists.txt  conanfile.py
src/: Greeter.cpp  Greeter.hpp  fcn.cpp  fcn.h  main.cpp
test_package/: CMakeLists.txt  Greeter_test.cpp  conanfile.py
